Update website bookings schema and api definitions
